objects/Funding__c.object
<CustomObject>
    <fields>
        <fullName>ActualFundDate__c</fullName>
        <description>Used for Institutional Opportunities</description>
        <label>Actual Fund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualFundingValue__c</fullName>
        <description>Used for Institutional Opportunities</description>
        <label>Actual Funding Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedFundDate__c</fullName>
        <description>Estimated Date that funding for the new relationship or capital contribution will come in.</description>
        <label>Estimated Fund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FundingValue__c</fullName>
        <label>Estimated Funding Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Funding</fullName>
                    <default>true</default>
                    <label>Initial Funding</label>
                </value>
                <value>
                    <fullName>Subsequent Funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fundings</relationshipLabel>
        <relationshipName>Fundings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Populated as part of the Institutional Sub Advised process for new relationships and capital contributions</description>
    <label>Funding</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Funding #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>